<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="Next"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:orderInCategory="102"
        android:title="send as email" />
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="103"
        android:title="Reminder" />
</menu>
